WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254623
PDF disappears during live-ish resize
https://bugs.webkit.org/show_bug.cgi?id=254623
Summary
PDF disappears during live-ish resize
Tim Horton
Reported
2023-03-28 15:41:53 PDT
PDF disappears during live-ish resize
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-03-28 15:42:03 PDT
<
rdar://problem/105852767
>
Tim Horton
Comment 2
2023-03-28 15:43:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12081
EWS
Comment 3
2023-03-28 17:02:29 PDT
Committed
262249@main
(31a8c572cfb8): <
https://commits.webkit.org/262249@main
> Reviewed commits have been landed. Closing PR #12081 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug