PDF disappears during live-ish resize https://bugs.webkit.org/show_bug.cgi?id=254623 rdar://105852767

Reviewed by Megan Gardner.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _beginAutomaticLiveResizeIfNeeded]):
Disable live-ish resize for custom content views, which expect to get
full-fidelity updates during resize.

Canonical link: https://commits.webkit.org/262249@main